suitable: Autospec creation for version 0.17.2

--- a/options.conf
+++ b/options.conf
@@ -4,6 +4,7 @@ url = https://files.pythonhosted.org/packages/0c/c5/139eb5686f297c03b38fc5ad6d81
 archives = 
 giturl = https://github.com/seantis/suitable.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -38,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
